# kport

./: .travis.yml  CMakeLists.txt  README.md
kport/: align.h  assert.h  compiler.h  compiler_char.h  compiler_functionality.h  compiler_optimization.h  compiler_traits.h  compiler_warning.h  kport.h  nullptr.h  platform.h  string.h  version.h.in
